<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jbt.myhomemovies.MovieAct"
    android:background="@drawable/stars_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wellcome_movie_act"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="54dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTitle"
            android:layout_weight="1"
            android:hint="@string/hint_title_movieact"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="412dp"
        android:layout_weight="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:hint="@string/hint_body_movieact"
            android:id="@+id/editBody"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editUrl"
            android:hint="@string/hint_url_movieact"
            android:autoText="false"
            android:elegantTextHeight="false"
            android:height="45dp"
            android:textSize="@dimen/abc_text_size_small_material"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_pic"
                android:id="@+id/btn_show_image"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/white" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageView_poster"
                android:layout_weight="5" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="219dp"
                android:layout_height="wrap_content">

                <Button
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/save_added_movie_details"
                android:id="@+id/btn_save_act2"
                android:layout_gravity="left"
                android:textColor="@android:color/white" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/btn_share"
                    android:text="@string/btn_share"
                    android:layout_gravity="left"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
